src/test/run-pass/hello.rs
// -*- rust -*-

fn main() {
    io::println("hello, world");
}
